# tectyl

./: .gitignore  Cargo.toml
src/: app.rs  editor.rs  lib.rs  main.rs  math.rs  tui.rs
src/term/: mod.rs  terminal.rs  tui.rs  util.rs
