[package]
name = "tectyl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = { version = "0.27", features = ["event-stream"] }
ropey = "1.6"

futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
tracing-appender = "0.2"
